# BlenderGPT

./: .gitignore  README.md  manufacturability.md  process.md  pyproject.toml
blender_gpt/: __init__.py  apply_actions.py  blender_manifest.toml  context_builder.py  ollama_client.py  operators.py  preferences.py  system_prompt.py  ui.py
blender_gpt/prompts/: action_schema.txt  system_prompt_rules.txt
ea_archimate_emf/: EA_Archimate_Examples.pptx  build_examples_presentation.py  connection_anchors.py  export_exact_from_ppt.py  generate_archimate_relations.py  generate_icons.py
scripts/: build_extension.sh
tests/: blender_e2e.py  conftest.py  test_blender_subprocess.py  test_extract_actions_json.py  test_ollama_context.py  test_ollama_resolve.py  test_ollama_wake.py  test_system_prompt.py
